# signalhub

./: README.md  README_QUICKSTART.md  pyproject.toml
src/signalhub/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
